inc/bb_api.h

/** @} */  /** <!-- ==== Macro Definition end ==== */

/******************************* Structure Definition ***************************/
/** \addtogroup      BB_API */
/** @{ */  /** <!-- [BB_API] */

/**定义基带MAC地址*/
typedef struct {
    uint8_t addr[BB_MAC_LEN];                                   /**<@note MAC地址字节*/
} bb_mac_t;
/**定义基带通用的方向属性*/
typedef enum {
    BB_DIR_TX,                                                  /**<@note 发送方向*/
    BB_DIR_RX,                                                  /**<@note 接收方向*/
    BB_DIR_MAX
} bb_dir_e;
/**定义debug 通道 msgid*/
typedef enum {
    BB_DBG_CLIENT_CHANGE,
    BB_DBG_DATA,
    BB_DBG_MAX,
} bb_debug_id_e;
/**定义8030基带工作频率*/
typedef enum {
    BB_CLK_100M_SEL = 0,                                        /**<@note 100M工作频率*/
    BB_CLK_200M_SEL = 1                                         /**<@note 200M工作频率*/
} bb_clk_sel_e;
/**定义基带基本角色*/
typedef enum {
    BB_ROLE_AP,                                                 /**<@note 网络根节点设备*/
    BB_ROLE_DEV,                                                /**<@note 网络叶节点设备*/
    BB_ROLE_MAX
} bb_role_e;
/**定义基带工作模式*/
typedef enum {
    BB_MODE_SINGLE_USER,                                        /**<@note 单用户模式*/
    BB_MODE_MULTI_USER,                                         /**<@note 多用户模式*/
    BB_MODE_RELAY,                                              /**<@note 中继模式（暂不支持）*/
    BB_MODE_DIRECTOR,                                           /**<@note 导演模式-1对多可靠广播模式，不支持MCS负数*/
    BB_MODE_MAX
} bb_mode_e;
/**定义逻辑SLOT类型*/
typedef enum {
    BB_SLOT_0 = 0,                                              /**<@note 逻辑位置SLOT0*/
    BB_SLOT_AP = 0,                                             /**<@attention DEV侧用于标识AP的逻辑位置*/
    BB_SLOT_1,                                                  /**<@note 逻辑位置SLOT1*/
    BB_SLOT_2,                                                  /**<@note 逻辑位置SLOT2*/
    BB_SLOT_3,                                                  /**<@note 逻辑位置SLOT3*/
    BB_SLOT_4,                                                  /**<@note 逻辑位置SLOT4*/
    BB_SLOT_5,                                                  /**<@note 逻辑位置SLOT5*/
    BB_SLOT_6,                                                  /**<@note 逻辑位置SLOT6*/
    BB_SLOT_7,                                                  /**<@note 逻辑位置SLOT7*/
    BB_SLOT_MAX
} bb_slot_e;
/**定义基带物理用户类型*/
typedef enum {
    BB_USER_0 = 0,                                              /**<@note 物理用户0*/
    BB_USER_1,                                                  /**<@note 物理用户1*/
    BB_USER_2,                                                  /**<@note 物理用户2*/
    BB_USER_3,                                                  /**<@note 物理用户3*/
    BB_USER_4,                                                  /**<@note 物理用户4*/
    BB_USER_5,                                                  /**<@note 物理用户5*/
    BB_USER_6,                                                  /**<@note 物理用户6*/
    BB_USER_7,                                                  /**<@note 物理用户7*/
#if 0
    BB_USER_DFS = BB_USER_7,                                    /**<@note 物理用户DFS*/
#endif
    BB_USER_BR_CS,                                              /**<@note 物理用户BR/CS*/
    BB_USER_BR2_CS2,                                            /**<@note 物理用户BR2/CS2*/
    BB_DATA_USER_MAX,                                           /**<@attention 最大数据用户标识，用于软件编程辅助*/
    BB_USER_SWEEP = BB_DATA_USER_MAX,                           /**<@note 物理长扫频用户*/
    BB_USER_SWEEP_SHORT,                                        /**<@note 物理短扫频用户*/
    BB_USER_MAX
} bb_user_e;
/**定义基带MCS类型*/
typedef enum {
    BB_PHY_MCS_NEG_2,                                           /**<@note BPSK   CR_1/2 REP_4 单流*/
    BB_PHY_MCS_NEG_1,                                           /**<@note BPSK   CR_1/2 REP_2 单流*/
    BB_PHY_MCS_0,                                               /**<@note BPSK   CR_1/2 REP_1 单流*/
    BB_PHY_MCS_1,                                               /**<@note BPSK   CR_2/3 REP_1 单流*/
    BB_PHY_MCS_2,                                               /**<@note BPSK   CR_3/4 REP_1 单流*/
    BB_PHY_MCS_3,                                               /**<@note QPSK   CR_1/2 REP_1 单流*/
    BB_PHY_MCS_4,                                               /**<@note QPSK   CR_2/3 REP_1 单流*/
    BB_PHY_MCS_5,                                               /**<@note QPSK   CR_3/4 REP_1 单流*/
    BB_PHY_MCS_6,                                               /**<@note 16QAM  CR_1/2 REP_1 单流*/
    BB_PHY_MCS_7,                                               /**<@note 16QAM  CR_2/3 REP_1 单流*/
    BB_PHY_MCS_8,                                               /**<@note 16QAM  CR_3/4 REP_1 单流*/
    BB_PHY_MCS_9,                                               /**<@note 64QAM  CR_1/2 REP_1 单流*/
    BB_PHY_MCS_10,                                              /**<@note 64QAM  CR_2/3 REP_1 单流*/
    BB_PHY_MCS_11,                                              /**<@note 64QAM  CR_3/4 REP_1 单流*/
    BB_PHY_MCS_12,                                              /**<@note 256QAM CR_1/2 REP_1 单流*/
    BB_PHY_MCS_13,                                              /**<@note 256QAM CR_2/3 REP_1 单流*/
    BB_PHY_MCS_14,                                              /**<@note QPSK   CR_1/2 REP_1 双流*/
    BB_PHY_MCS_15,                                              /**<@note QPSK   CR_2/3 REP_1 双流*/
    BB_PHY_MCS_16,                                              /**<@note QPSK   CR_3/4 REP_1 双流*/
    BB_PHY_MCS_17,                                              /**<@note 16QAM  CR_1/2 REP_1 双流*/
    BB_PHY_MCS_18,                                              /**<@note 16QAM  CR_2/3 REP_1 双流*/
    BB_PHY_MCS_19,                                              /**<@note 16QAM  CR_3/4 REP_1 双流*/
    BB_PHY_MCS_20,                                              /**<@note 64QAM  CR_1/2 REP_1 双流*/
    BB_PHY_MCS_21,                                              /**<@note 64QAM  CR_2/3 REP_1 双流*/
    BB_PHY_MCS_22,                                              /**<@note 64QAM  CR_3/4 REP_1 双流*/
    BB_PHY_MCS_MAX
} bb_phy_mcs_e;
/**定义多用户模式下的SLOT工作模式*/
typedef enum {
    BB_SLOT_MODE_FIXED = 0,                                     /**<@note SLOT数量固定不变*/
    BB_SLOT_MODE_DYNAMIC                                        /**<@note 根据DEV的接入与退出，动态的调整帧结构*/
} bb_slot_mode_e;
/**定义SDK链路层设备状态*/
typedef enum {
    BB_LINK_STATE_IDLE,                                         /**<@note 空闲状态*/
    BB_LINK_STATE_LOCK,                                         /**<@note 链路信道与对方Lock*/
    BB_LINK_STATE_CONNECT,                                      /**<@note 链路信道、数据信道都与对方Lock*/
    BB_LINK_STATE_MAX
} bb_link_state_e;
/**定义SDK的callback事件类型*/
typedef enum {
    BB_EVENT_LINK_STATE = 0,                                    /**<@note 链路状态发生变化事件*/
    BB_EVENT_MCS_CHANGE,                                        /**<@note MCS等级发生变化事件*/
    BB_EVENT_CHAN_CHANGE,                                       /**<@note 工作信道发生变化事件*/
    BB_EVENT_PLOT_DATA,                                         /**<@note 用于debug的异步信号质量Plot数据*/
    BB_EVENT_FRAME_START,                                       /**<@note 每一个基带帧开始的事件*/
    BB_EVENT_OFFLINE,                                           /**<@note 当设备离线时获得通知           仅host侧有效*/
    BB_EVENT_PRJ_DISPATCH,                                      /**<@note 项目自定义事件分发*/
    BB_EVENT_PAIR_RESULT,                                       /**<@note 配对结果事件分发*/
    BB_EVENT_PRJ_DISPATCH2,                                     /**<@note 项目自定义事件分发2*/
    BB_EVENT_MCS_CHANGE_END,                                    /**<@note MCS等级发生变化结束事件*/
    BB_EVENT_MAX
} bb_event_e;
/**定义SDK内统一信道类型*/
typedef uint16_t chan_t;                                        /**<@note 统一信道=子信道(高Byte)+主信道(低Byte)*/
/**定义8030物理用户信号质量结构体*/
typedef struct {
    uint16_t snr;                                               /**<@note 物理用户接收信噪比，转化db公式：10log(snr/36)*/
    uint16_t ldpc_err;                                          /**<@note 交织块中解码错误的LDPC块个数*/
    uint16_t ldpc_num;                                          /**<@note 交织块中总的LDPC块个数*/
    uint8_t  gain_a;                                            /**<@note A路天线接收信号强度*/
    uint8_t  gain_b;                                            /**<@note B路天线接收信号强度*/
} bb_quality_t;
/**定义8030支持的的频段类型*/
typedef enum {
    BB_BAND_1G = 0,                                             /**<@note 1G: 150MHZ  ~ 1000MHZ*/
    BB_BAND_2G,                                                 /**<@note 2G: 1000MHZ ~ 4000MHZ*/
    BB_BAND_5G,                                                 /**<@note 5G: 4000MHZ ~ 7000MHZ*/
    BB_BAND_MAX
} bb_band_e;
/**定义8030射频通道类型*/
typedef enum {
    BB_RF_PATH_A = 0,                                               /**<@note 射频A路*/
    BB_RF_PATH_B,                                               /**<@note 射频B路*/
    BB_RF_PATH_MAX
} bb_rf_path_e;
/**定义当前工作频段模式*/
typedef enum {
    BB_BAND_MODE_SINGLE = 0,                                    /**<@note 单频模式*/
    BB_BAND_MODE_2G_5G,                                         /**<@note 2G和5G组合*/
    BB_BAND_MODE_1G_2G,                                         /**<@note 1G和2G组合*/
    BB_BAND_MODE_1G_5G,                                         /**<@note 1G和5G组合*/
    BB_BAND_MODE_MAX
}bb_band_mode_e;
/**定义8030支持的频宽类型*/
typedef enum {
    BB_BW_1_25M = 0,                                            /**<@note 1.25MHZ*/
    BB_BW_2_5M  = 1,                                            /**<@note 2.5MHZ*/
    BB_BW_5M    = 2,                                            /**<@note 5MHZ*/
    BB_BW_10M   = 3,                                            /**<@note 10MHZ*/
    BB_BW_20M   = 4,                                            /**<@note 20MHZ*/
    BB_BW_40M   = 5,                                            /**<@note 40MHZ*/
    BB_BW_MAX
} bb_bandwidth_e;
/**定义8030支持的交织块长度*/
typedef enum {
    BB_TIMEINTLV_LEN_3  = 0,                                    /**<@note 3  OFDM*/
    BB_TIMEINTLV_LEN_6  = 1,                                    /**<@note 6  OFDM*/
    BB_TIMEINTLV_LEN_12 = 2,                                    /**<@note 12 OFDM*/
    BB_TIMEINTLV_LEN_24 = 3,                                    /**<@note 24 OFDM*/
    BB_TIMEINTLV_LEN_48 = 4,                                    /**<@note 48 OFDM*/
    BB_TIMEINTLV_LEN_MAX
} bb_timeintlv_len_e;
/**定义8030交织类型*/
typedef enum {
    BB_TIMEINTLV_OFF = 0,                                       /**<@note 交织块时域不交织*/
    BB_TIMEINTLV_ON  = 1,                                       /**<@note 交织块时域交织*/
    BB_TIMEINTLV_ENABLE_MAX
} bb_timeintlv_enable_e;
/**定义8030支持的交织块数量*/
typedef enum {
    BB_TIMEINTLV_1_BLOCK = 0,                                   /**<@note 一个交织块*/
    BB_TIMEINTLV_2_BLOCK = 1,                                   /**<@note 两个交织块*/
    BB_TIMEINTLV_NUM_MAX
} bb_timeintlv_num_e;
/**定义8030 slot内是否需要payload*/
typedef enum {
    BB_PAYLOAD_ON   = 0,                                        /**<@attention slot内有payload*/
    BB_PAYLOAD_OFF  = 1,                                        /**<@attention slot内没有payload*/
    BB_PAYLOAD_MAX
} bb_payload_e;
/**定义8030 FCH的长度模式*/
typedef enum {
    BB_FCH_INFO_96BITS  = 0,                                    /**<@attention 96bits FCH, 默认推荐*/
    BB_FCH_INFO_48BITS  = 1,                                    /**<@attention 48bits FCH, 谨慎使用*/
    BB_FCH_INFO_192BITS = 2,                                    /**<@attention 192bits FCH*/
    BB_FCH_INFO_MAX
} bb_fch_info_len_e;
/**定义8030支持的RF发送模式*/
typedef enum {
    BB_TX_1TX          = 0,                                     /**<@note 单天线发送信号*/
    BB_TX_2TX_STBC     = 1,                                     /**<@note 双天线发送相关信号*/
    BB_TX_2TX_MIMO     = 2,                                     /**<@note 双天线发送独立信号*/
    BB_TX_MODE_MAX
} bb_tx_mode_e;
/**定义8030支持的RF接收模式*/
typedef enum {
    BB_RX_1T1R         = 0,                                     /**<@note 单天线接收信号*/
    BB_RX_1T2R         = 1,                                     /**<@note 双天线接收对端的单发信号*/
    BB_RX_2T2R_STBC    = 2,                                     /**<@note 双天线接收对方的双发STBC信号*/
    BB_RX_2T2R_MIMO    = 3,                                     /**<@note 双天线接收对方的双发MIMO信号*/
    BB_RX_MODE_MAX
} bb_rx_mode_e;
/**定义8030功率模式*/
typedef enum {
    BB_PHY_PWR_OPENLOOP = 0,                                    /**<@note 开环模式*/
    BB_PHY_PWR_CLOSELOOP,                                       /**<@note 闭环模式*/
} bb_phy_pwr_mode_e;
/**定义8030 BR跳频模式*/
typedef enum {
    BB_BR_HOP_MODE_FIXED,                                       /**<@note 固定模式*/
    BB_BR_HOP_MODE_FOLLOW_UP_CHAN,                              /**<@note BR信道与AP的上行信道保持同步*/
    BB_BR_HOP_MODE_HOP_ON_IDLE,                                 /**<@note BR信道在无DEV连接时，周期性改变*/
    BB_BR_HOP_MODE_MAX
} bb_br_hop_mode_e;
/**定义8030 auto band的切换类型*/
typedef enum {
    BB_BAND_HOP_2G_2_5G = 0,
    BB_BAND_HOP_5G_2_2G,
    BB_BAND_HOP_ITEM_MAX
} bb_band_hop_item_e;
/**定义dfs认证类型*/
typedef enum {
    BB_DFS_TYPE_FCC = 0,
    BB_DFS_TYPE_CE
} bb_dfs_type_e;
/**定义dfs操作类型*/
typedef enum {
    BB_DFS_CONF_GET = 0,
    BB_DFS_CONF_SET,
    BB_DFS_EVENT
} bb_dfs_sub_cmd_e;
/**定义链路状态变化的事件结构体*/
typedef struct {
    uint8_t         slot;                                       /**<@note 链路状态发生位置, 类型：bb_slot_e*/
    uint8_t         cur_state;                                  /**<@note 链路当前状态，类型：bb_link_state_e*/
    uint8_t         prev_state;                                 /**<@note 链路之前状态，类型：bb_link_state_e*/
} bb_event_link_state_t;