src/bb/c.zig


pub const __builtin_bswap16 = @import("std").zig.c_builtins.__builtin_bswap16;
pub const __builtin_bswap32 = @import("std").zig.c_builtins.__builtin_bswap32;
pub const __builtin_bswap64 = @import("std").zig.c_builtins.__builtin_bswap64;
pub const __builtin_signbit = @import("std").zig.c_builtins.__builtin_signbit;
pub const __builtin_signbitf = @import("std").zig.c_builtins.__builtin_signbitf;
pub const __builtin_popcount = @import("std").zig.c_builtins.__builtin_popcount;
pub const __builtin_ctz = @import("std").zig.c_builtins.__builtin_ctz;
pub const __builtin_clz = @import("std").zig.c_builtins.__builtin_clz;
pub const __builtin_sqrt = @import("std").zig.c_builtins.__builtin_sqrt;
pub const __builtin_sqrtf = @import("std").zig.c_builtins.__builtin_sqrtf;
pub const __builtin_sin = @import("std").zig.c_builtins.__builtin_sin;
pub const __builtin_sinf = @import("std").zig.c_builtins.__builtin_sinf;
pub const __builtin_cos = @import("std").zig.c_builtins.__builtin_cos;
pub const __builtin_cosf = @import("std").zig.c_builtins.__builtin_cosf;
pub const __builtin_exp = @import("std").zig.c_builtins.__builtin_exp;
pub const __builtin_expf = @import("std").zig.c_builtins.__builtin_expf;
pub const __builtin_exp2 = @import("std").zig.c_builtins.__builtin_exp2;
pub const __builtin_exp2f = @import("std").zig.c_builtins.__builtin_exp2f;
pub const __builtin_log = @import("std").zig.c_builtins.__builtin_log;
pub const __builtin_logf = @import("std").zig.c_builtins.__builtin_logf;
pub const __builtin_log2 = @import("std").zig.c_builtins.__builtin_log2;
pub const __builtin_log2f = @import("std").zig.c_builtins.__builtin_log2f;
pub const __builtin_log10 = @import("std").zig.c_builtins.__builtin_log10;
pub const __builtin_log10f = @import("std").zig.c_builtins.__builtin_log10f;
pub const __builtin_abs = @import("std").zig.c_builtins.__builtin_abs;
pub const __builtin_labs = @import("std").zig.c_builtins.__builtin_labs;
pub const __builtin_llabs = @import("std").zig.c_builtins.__builtin_llabs;
pub const __builtin_fabs = @import("std").zig.c_builtins.__builtin_fabs;
pub const __builtin_fabsf = @import("std").zig.c_builtins.__builtin_fabsf;
pub const __builtin_floor = @import("std").zig.c_builtins.__builtin_floor;
pub const __builtin_floorf = @import("std").zig.c_builtins.__builtin_floorf;
pub const __builtin_ceil = @import("std").zig.c_builtins.__builtin_ceil;
pub const __builtin_ceilf = @import("std").zig.c_builtins.__builtin_ceilf;
pub const __builtin_trunc = @import("std").zig.c_builtins.__builtin_trunc;
pub const __builtin_truncf = @import("std").zig.c_builtins.__builtin_truncf;
pub const __builtin_round = @import("std").zig.c_builtins.__builtin_round;
pub const __builtin_roundf = @import("std").zig.c_builtins.__builtin_roundf;
pub const __builtin_strlen = @import("std").zig.c_builtins.__builtin_strlen;
pub const __builtin_strcmp = @import("std").zig.c_builtins.__builtin_strcmp;
pub const __builtin_object_size = @import("std").zig.c_builtins.__builtin_object_size;
pub const __builtin___memset_chk = @import("std").zig.c_builtins.__builtin___memset_chk;
pub const __builtin_memset = @import("std").zig.c_builtins.__builtin_memset;
pub const __builtin___memcpy_chk = @import("std").zig.c_builtins.__builtin___memcpy_chk;
pub const __builtin_memcpy = @import("std").zig.c_builtins.__builtin_memcpy;
pub const __builtin_expect = @import("std").zig.c_builtins.__builtin_expect;
pub const __builtin_nanf = @import("std").zig.c_builtins.__builtin_nanf;
pub const __builtin_huge_valf = @import("std").zig.c_builtins.__builtin_huge_valf;
pub const __builtin_inff = @import("std").zig.c_builtins.__builtin_inff;
pub const __builtin_isnan = @import("std").zig.c_builtins.__builtin_isnan;
pub const __builtin_isinf = @import("std").zig.c_builtins.__builtin_isinf;
pub const __builtin_isinf_sign = @import("std").zig.c_builtins.__builtin_isinf_sign;
pub const __has_builtin = @import("std").zig.c_builtins.__has_builtin;
pub const __builtin_assume = @import("std").zig.c_builtins.__builtin_assume;
pub const __builtin_unreachable = @import("std").zig.c_builtins.__builtin_unreachable;
pub const __builtin_constant_p = @import("std").zig.c_builtins.__builtin_constant_p;
pub const __builtin_mul_overflow = @import("std").zig.c_builtins.__builtin_mul_overflow;
pub const int_least64_t = i64;
pub const uint_least64_t = u64;
pub const int_fast64_t = i64;
pub const uint_fast64_t = u64;
pub const int_least32_t = i32;
pub const uint_least32_t = u32;
pub const int_fast32_t = i32;
pub const uint_fast32_t = u32;
pub const int_least16_t = i16;
pub const uint_least16_t = u16;
pub const int_fast16_t = i16;
pub const uint_fast16_t = u16;
pub const int_least8_t = i8;
pub const uint_least8_t = u8;
pub const int_fast8_t = i8;
pub const uint_fast8_t = u8;
pub const intmax_t = c_longlong;
pub const uintmax_t = c_ulonglong;
pub const bb_mac_t = extern struct {
    addr: [4]u8 = @import("std").mem.zeroes([4]u8),
};
pub const BB_DIR_TX: c_int = 0;
pub const BB_DIR_RX: c_int = 1;
pub const BB_DIR_MAX: c_int = 2;
pub const bb_dir_e = c_uint;
pub const BB_DBG_CLIENT_CHANGE: c_int = 0;
pub const BB_DBG_DATA: c_int = 1;
pub const BB_DBG_MAX: c_int = 2;
pub const bb_debug_id_e = c_uint;
pub const BB_CLK_100M_SEL: c_int = 0;
pub const BB_CLK_200M_SEL: c_int = 1;
pub const bb_clk_sel_e = c_uint;
pub const BB_ROLE_AP: c_int = 0;
pub const BB_ROLE_DEV: c_int = 1;
pub const BB_ROLE_MAX: c_int = 2;
pub const bb_role_e = c_uint;
pub const BB_MODE_SINGLE_USER: c_int = 0;
pub const BB_MODE_MULTI_USER: c_int = 1;
pub const BB_MODE_RELAY: c_int = 2;
pub const BB_MODE_DIRECTOR: c_int = 3;
pub const BB_MODE_MAX: c_int = 4;
pub const bb_mode_e = c_uint;
pub const BB_SLOT_0: c_int = 0;
pub const BB_SLOT_AP: c_int = 0;
pub const BB_SLOT_1: c_int = 1;
pub const BB_SLOT_2: c_int = 2;
pub const BB_SLOT_3: c_int = 3;
pub const BB_SLOT_4: c_int = 4;
pub const BB_SLOT_5: c_int = 5;
pub const BB_SLOT_6: c_int = 6;
pub const BB_SLOT_7: c_int = 7;
pub const BB_SLOT_MAX: c_int = 8;
pub const bb_slot_e = c_uint;
pub const BB_USER_0: c_int = 0;
pub const BB_USER_1: c_int = 1;
pub const BB_USER_2: c_int = 2;
pub const BB_USER_3: c_int = 3;
pub const BB_USER_4: c_int = 4;
pub const BB_USER_5: c_int = 5;
pub const BB_USER_6: c_int = 6;
pub const BB_USER_7: c_int = 7;
pub const BB_USER_BR_CS: c_int = 8;
pub const BB_USER_BR2_CS2: c_int = 9;
pub const BB_DATA_USER_MAX: c_int = 10;
pub const BB_USER_SWEEP: c_int = 10;
pub const BB_USER_SWEEP_SHORT: c_int = 11;
pub const BB_USER_MAX: c_int = 12;
pub const bb_user_e = c_uint;
pub const BB_PHY_MCS_NEG_2: c_int = 0;
pub const BB_PHY_MCS_NEG_1: c_int = 1;
pub const BB_PHY_MCS_0: c_int = 2;
pub const BB_PHY_MCS_1: c_int = 3;
pub const BB_PHY_MCS_2: c_int = 4;
pub const BB_PHY_MCS_3: c_int = 5;
pub const BB_PHY_MCS_4: c_int = 6;
pub const BB_PHY_MCS_5: c_int = 7;
pub const BB_PHY_MCS_6: c_int = 8;
pub const BB_PHY_MCS_7: c_int = 9;
pub const BB_PHY_MCS_8: c_int = 10;
pub const BB_PHY_MCS_9: c_int = 11;
pub const BB_PHY_MCS_10: c_int = 12;
pub const BB_PHY_MCS_11: c_int = 13;
pub const BB_PHY_MCS_12: c_int = 14;
pub const BB_PHY_MCS_13: c_int = 15;
pub const BB_PHY_MCS_14: c_int = 16;
pub const BB_PHY_MCS_15: c_int = 17;
pub const BB_PHY_MCS_16: c_int = 18;
pub const BB_PHY_MCS_17: c_int = 19;
pub const BB_PHY_MCS_18: c_int = 20;
pub const BB_PHY_MCS_19: c_int = 21;
pub const BB_PHY_MCS_20: c_int = 22;
pub const BB_PHY_MCS_21: c_int = 23;
pub const BB_PHY_MCS_22: c_int = 24;
pub const BB_PHY_MCS_MAX: c_int = 25;
pub const bb_phy_mcs_e = c_uint;
pub const BB_SLOT_MODE_FIXED: c_int = 0;
pub const BB_SLOT_MODE_DYNAMIC: c_int = 1;
pub const bb_slot_mode_e = c_uint;
pub const BB_LINK_STATE_IDLE: c_int = 0;
pub const BB_LINK_STATE_LOCK: c_int = 1;
pub const BB_LINK_STATE_CONNECT: c_int = 2;
pub const BB_LINK_STATE_MAX: c_int = 3;
pub const bb_link_state_e = c_uint;
pub const BB_EVENT_LINK_STATE: c_int = 0;
pub const BB_EVENT_MCS_CHANGE: c_int = 1;
pub const BB_EVENT_CHAN_CHANGE: c_int = 2;
pub const BB_EVENT_PLOT_DATA: c_int = 3;
pub const BB_EVENT_FRAME_START: c_int = 4;
pub const BB_EVENT_OFFLINE: c_int = 5;
pub const BB_EVENT_PRJ_DISPATCH: c_int = 6;
pub const BB_EVENT_PAIR_RESULT: c_int = 7;
pub const BB_EVENT_PRJ_DISPATCH2: c_int = 8;
pub const BB_EVENT_MCS_CHANGE_END: c_int = 9;
pub const BB_EVENT_MAX: c_int = 10;
pub const bb_event_e = c_uint;
pub const chan_t = u16;
pub const bb_quality_t = extern struct {
    snr: u16 = @import("std").mem.zeroes(u16),
    ldpc_err: u16 = @import("std").mem.zeroes(u16),
    ldpc_num: u16 = @import("std").mem.zeroes(u16),
    gain_a: u8 = @import("std").mem.zeroes(u8),
    gain_b: u8 = @import("std").mem.zeroes(u8),
};
pub const BB_BAND_1G: c_int = 0;
pub const BB_BAND_2G: c_int = 1;
pub const BB_BAND_5G: c_int = 2;
pub const BB_BAND_MAX: c_int = 3;
pub const bb_band_e = c_uint;
pub const BB_RF_PATH_A: c_int = 0;
pub const BB_RF_PATH_B: c_int = 1;
pub const BB_RF_PATH_MAX: c_int = 2;
pub const bb_rf_path_e = c_uint;
pub const BB_BAND_MODE_SINGLE: c_int = 0;
pub const BB_BAND_MODE_2G_5G: c_int = 1;
pub const BB_BAND_MODE_1G_2G: c_int = 2;
pub const BB_BAND_MODE_1G_5G: c_int = 3;
pub const BB_BAND_MODE_MAX: c_int = 4;
pub const bb_band_mode_e = c_uint;
pub const BB_BW_1_25M: c_int = 0;
pub const BB_BW_2_5M: c_int = 1;
pub const BB_BW_5M: c_int = 2;
pub const BB_BW_10M: c_int = 3;
pub const BB_BW_20M: c_int = 4;
pub const BB_BW_40M: c_int = 5;
pub const BB_BW_MAX: c_int = 6;
pub const bb_bandwidth_e = c_uint;
pub const BB_TIMEINTLV_LEN_3: c_int = 0;
pub const BB_TIMEINTLV_LEN_6: c_int = 1;
pub const BB_TIMEINTLV_LEN_12: c_int = 2;
pub const BB_TIMEINTLV_LEN_24: c_int = 3;
pub const BB_TIMEINTLV_LEN_48: c_int = 4;
pub const BB_TIMEINTLV_LEN_MAX: c_int = 5;
pub const bb_timeintlv_len_e = c_uint;
pub const BB_TIMEINTLV_OFF: c_int = 0;
pub const BB_TIMEINTLV_ON: c_int = 1;
pub const BB_TIMEINTLV_ENABLE_MAX: c_int = 2;
pub const bb_timeintlv_enable_e = c_uint;
pub const BB_TIMEINTLV_1_BLOCK: c_int = 0;
pub const BB_TIMEINTLV_2_BLOCK: c_int = 1;
pub const BB_TIMEINTLV_NUM_MAX: c_int = 2;
pub const bb_timeintlv_num_e = c_uint;
pub const BB_PAYLOAD_ON: c_int = 0;
pub const BB_PAYLOAD_OFF: c_int = 1;
pub const BB_PAYLOAD_MAX: c_int = 2;
pub const bb_payload_e = c_uint;
pub const BB_FCH_INFO_96BITS: c_int = 0;
pub const BB_FCH_INFO_48BITS: c_int = 1;
pub const BB_FCH_INFO_192BITS: c_int = 2;
pub const BB_FCH_INFO_MAX: c_int = 3;
pub const bb_fch_info_len_e = c_uint;
pub const BB_TX_1TX: c_int = 0;
pub const BB_TX_2TX_STBC: c_int = 1;
pub const BB_TX_2TX_MIMO: c_int = 2;
pub const BB_TX_MODE_MAX: c_int = 3;
pub const bb_tx_mode_e = c_uint;
pub const BB_RX_1T1R: c_int = 0;
pub const BB_RX_1T2R: c_int = 1;
pub const BB_RX_2T2R_STBC: c_int = 2;
pub const BB_RX_2T2R_MIMO: c_int = 3;
pub const BB_RX_MODE_MAX: c_int = 4;
pub const bb_rx_mode_e = c_uint;
pub const BB_PHY_PWR_OPENLOOP: c_int = 0;
pub const BB_PHY_PWR_CLOSELOOP: c_int = 1;
pub const bb_phy_pwr_mode_e = c_uint;
pub const BB_BR_HOP_MODE_FIXED: c_int = 0;
pub const BB_BR_HOP_MODE_FOLLOW_UP_CHAN: c_int = 1;
pub const BB_BR_HOP_MODE_HOP_ON_IDLE: c_int = 2;
pub const BB_BR_HOP_MODE_MAX: c_int = 3;
pub const bb_br_hop_mode_e = c_uint;
pub const BB_BAND_HOP_2G_2_5G: c_int = 0;
pub const BB_BAND_HOP_5G_2_2G: c_int = 1;
pub const BB_BAND_HOP_ITEM_MAX: c_int = 2;
pub const bb_band_hop_item_e = c_uint;
pub const BB_DFS_TYPE_FCC: c_int = 0;
pub const BB_DFS_TYPE_CE: c_int = 1;
pub const bb_dfs_type_e = c_uint;
pub const BB_DFS_CONF_GET: c_int = 0;
pub const BB_DFS_CONF_SET: c_int = 1;
pub const BB_DFS_EVENT: c_int = 2;
pub const bb_dfs_sub_cmd_e = c_uint;
pub const bb_event_link_state_t = extern struct {
    slot: u8 = @import("std").mem.zeroes(u8),
    cur_state: u8 = @import("std").mem.zeroes(u8),
    prev_state: u8 = @import("std").mem.zeroes(u8),
};
